plantilla video responsive

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="clases de electronica"/>
+  <meta name="keywords" content="clases electronica, beeslearn,circuitos rc, circuitos rlc, analisis circuitos, ejemplo circuito"/>
+  <link rel="shortcut icon" href="images/logotitle.svg">
   <title>BeesLearn tutoriales</title>
   <link href="styles/style.css" rel="stylesheet">
 </head>
@@ -23,7 +26,7 @@
 
       <ul>
         <li><a class="link" href="https://beeslearn.github.io/">Inicio</a></li>
-        <li><a class="active" href="#">Tutorias</a></li>
+        <li><a class="active" href="https://beeslearn.github.io/tutorials/">Tutorias</a></li>
         <li><a class="link" href="https://beeslearn.github.io/about/">Nosotros</a></li>
       </ul>
 
@@ -34,46 +37,50 @@
   <section class="barner">
     <h1><titulo</title></h1>
     <br>
-    <p>Desarrolla, mejora y fortalece todos los conocimientos y habilidades en el campo de la tecnología, la electrónica y el mundo digital. <br>Asesorias en talleres, laboratorios, preparación de examenes.</p>
+    <p>A continuación encuentra unos tutoriales con unos conceptos que aunque son básicos resultan ser de suma importancia.</p>    
+  </section>
+
+  <!--inicio tema 1-->
+
+  <section class="materia uno">
+
+    <div class="titulo"><h2>Tema 1</h2></div>
+
+    <div class="video">
+      <iframe src="https://www.youtube.com/embed/dxj_pFKtc6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>      
+      </iframe>
+    </div>
     <br>
-    <p>Estudia desde la comodidad de la casa, con asesorias virtuales o a domicilio.</p>
+
+    <div class="contenido">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id placeat iste ipsum similique. Non alias neque quod odit reprehenderit aut rerum asperiores sequi repudiandae cupiditate. Facilis consectetur molestias at error.</p>
+    </div>
     <br>
-    <p>Mira nuestros video tutoriales y contacta por correo o whatsapp para más información</p> 
-  </section>
-
-  <section class="tutoriala">
-
-    <div class="box ba">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/dxj_pFKtc6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    
-    <div class="box bb">
-      <h2>Teoria 1.</h2>
-    </div>
-
-  </section>
-  
-  <section class="tutorialb">
-
-    <div class="box bc">
-      <h2>Video 2.</h2>
-    </div>
-    <div class="box bd">
-      <h2>Teoria 2.</h2>
-    </div>
 
   </section>
 
-  <section class="tutorialc">
+  <!--fin tema 1-->  
 
-    <div class="box be">
-      <h2>Video 3.</h2>
+  <!--inicio tema 2-->
+
+  <section class="materia dos">
+
+    <div class="titulo"><h2>Tema 2</h2></div>
+
+    <div class="video">
+      <iframe src="https://www.youtube.com/embed/dxj_pFKtc6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>      
+      </iframe>
     </div>
-    <div class="box bf">
-      <h2>Teoria 3.</h2>
+    <br>
+
+    <div class="contenido">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id placeat iste ipsum similique. Non alias neque quod odit reprehenderit aut rerum asperiores sequi repudiandae cupiditate. Facilis consectetur molestias at error.</p>
     </div>
+    <br>
 
   </section>
+
+  <!--fin tema 2-->  
 
   <section class="redes">
 
