--- a/index.html
+++ b/index.html
@@ -61,10 +61,54 @@
     <!--                             section 1                                 -->
     <section class="intro">
       <h1>Titulo</h1><br>
-      <p>Lo se estudiar y trabajar no es fácil, cuentas con todas las capacidades, solo que el tiempo no alcanza y una  ingeniería demanda de un gran esfuerzo, por eso en  BeesLearn puedes obtener ayuda de forma oportuna. </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis est suscipit recusandae. Harum, necessitatibus ut! Necessitatibus consequatur sint accusamus harum quos unde sit, at fuga eveniet mollitia dolorem cum voluptates?</p>
     </section> 
     
-  </div>  
+  </div> 
+  
+  <!--                             section 2                                 -->
+  <!--inicio tema 1-->
+
+  <section class="materia uno">
+
+    <div class="titulo"><h2>Tema 1</h2></div>
+
+    <div class="video">
+      <iframe src="https://www.youtube.com/embed/dxj_pFKtc6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>      
+      </iframe>
+    </div>
+    <br>
+
+    <div class="contenido">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id placeat iste ipsum similique. Non alias neque quod odit reprehenderit aut rerum asperiores sequi repudiandae cupiditate. Facilis consectetur molestias at error.</p>
+    </div>
+    <br>
+
+  </section>
+
+  <!--fin tema 1-->  
+
+  <!--inicio tema 2-->
+
+  <section class="materia dos">
+
+    <div class="titulo"><h2>Tema 2</h2></div>
+
+    <div class="video">
+      <iframe src="https://www.youtube.com/embed/dxj_pFKtc6E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>      
+      </iframe>
+    </div>
+    <br>
+
+    <div class="contenido">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id placeat iste ipsum similique. Non alias neque quod odit reprehenderit aut rerum asperiores sequi repudiandae cupiditate. Facilis consectetur molestias at error.</p>
+    </div>
+    <br>
+
+  </section>
+
+  <!--fin tema 2-->  
+  <!--                             Fin     2                                 -->
 
   <!--                               Footer                                  -->
   <footer>
